feat: move kv zmq and scheduler into separate crate

--- a/lib/llm/Cargo.toml
+++ b/lib/llm/Cargo.toml
@@ -42,7 +42,7 @@ required-features = ["block-manager", "testing-cuda"]
 # repo
 dynamo-runtime = { workspace = true }
 dynamo-tokens = { workspace = true }
-dynamo-kv-router = { workspace = true, features = ["metrics"] }
+dynamo-kv-router = { workspace = true, features = ["metrics", "zmq", "scheduler"] }
 dynamo-memory = { path = "../memory", optional = true }
 
 # workspace
