--- a/lib/kv-router/Cargo.toml
+++ b/lib/kv-router/Cargo.toml
@@ -14,6 +14,9 @@ repository.workspace = true
 default = []
 metrics = ["dep:dynamo-runtime"]
 bench = ["dep:clap", "dep:indicatif"]
+zmq = ["dep:zeromq", "dep:rmp-serde"]
+scheduler = []
+full = ["metrics", "zmq", "scheduler"]
 
 [dependencies]
 # repo
@@ -31,6 +34,10 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 tracing = { workspace = true }
 xxhash-rust = { workspace = true }
+
+# zmq feature (optional)
+zeromq = { version = "0.4.1", optional = true }
+rmp-serde = { version = "1.3", optional = true }
 
 # bench (optional)
 clap = { version = "4.5", features = ["derive"], optional = true }
